# esp-idf-swift-platform

./: CMakeLists.txt  README.md  idf_component.yml  module.modulemap  platform.c  platform.h  project_include.cmake
Sources/: EventGroup.swift  IsrHandler.swift  Logger.swift  Platform.swift  Task.swift  TickType+Extensions.swift
